--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,36 +1,17 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+{% include top.html %}
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
-
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-
-    </head>
     <body>
 
-        <div class="site">
-            <div class="header">
-                <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-                <a class="extra" href="{{ site.baseurl }}/">overview</a>
-                <a class="extra" href="{{ site.baseurl }}/documentation">documentation</a>
-                <a class="extra" href="{{ site.baseurl }}/tutorials">tutorials</a>
-                <a class="extra" href="{{ site.baseurl }}/download">download</a>
-                <a class="extra" href="{{ site.baseurl }}/examples">examples</a>
-            </div>
+        {% include header.html %}
 
-            {{ content }}
-
-            <div class="footer">
-                <div>&copy; {{ site.time | date: "%Y" }} Box.com, Inc.</div>
+        <div class="content container">
+            <div class="sixteen columns">
+                {{ content }}
             </div>
         </div>
 
+        {% include footer.html %}
+
     </body>
-</html>
+
+{% include bottom.html %}
