--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -6,9 +6,9 @@
 
         <div class="content container">
             <div class="three columns">
-                {% include documentation-nav.html %}
+                {% include tutorial-nav.html %}
             </div>
-            <div class="documentation twelve columns offset-by-one">
+            <div class="tutorial twelve columns offset-by-one">
                 {{ content }}
             </div>
         </div>
