--- a/_includes/documentation-nav.html
+++ b/_includes/documentation-nav.html
@@ -1,16 +1,16 @@
 <div class="nav">
   <aside>
-    <h4><a class="{% if page.url contains '/documentation/application' %}current{% endif %}" href="{{ site.url }}/documentation/application/">Application</a></h4>
+    <h4><a class="{% if page.url contains '/documentation/application' %}current{% endif %}" href="{{ site.baseurl }}/documentation/application/">Application</a></h4>
     {% include documentation-ul.html directory='application' items='init destroy addService addModule addBehavior getService getGlobalConfig getModuleConfig start startAll stop stopAll isStarted broadcast on off fire' %}
-    <h4><a class="{% if page.url contains '/documentation/event-target' %}current{% endif %}" href="{{ site.url }}/documentation/event-target/">Event Target</a></h4>
+    <h4><a class="{% if page.url contains '/documentation/event-target' %}current{% endif %}" href="{{ site.baseurl }}/documentation/event-target/">Event Target</a></h4>
     {% include documentation-ul.html directory='event-target' items='on off fire' %}
-    <h4><a class="{% if page.url contains '/documentation/context' %}current{% endif %}" href="{{ site.url }}/documentation/context/">Context</a></h4>
+    <h4><a class="{% if page.url contains '/documentation/context' %}current{% endif %}" href="{{ site.baseurl }}/documentation/context/">Context</a></h4>
     {% include documentation-ul.html directory='context' items='getElement getConfig broadcast getService getGlobalConfig' %}
-    <h4><a class="{% if page.url contains '/documentation/services' %}current{% endif %}" href="{{ site.url }}/documentation/services/">Services</a></h4>
+    <h4><a class="{% if page.url contains '/documentation/services' %}current{% endif %}" href="{{ site.baseurl }}/documentation/services/">Services</a></h4>
     {% include documentation-ul.html directory='services' items='Singleton Factory' %}
-    <h4><a class="{% if page.url contains '/documentation/modules' %}current{% endif %}" href="{{ site.url }}/documentation/modules/">Modules</a></h4>
+    <h4><a class="{% if page.url contains '/documentation/modules' %}current{% endif %}" href="{{ site.baseurl }}/documentation/modules/">Modules</a></h4>
     {% include documentation-ul.html directory='modules' items='init destroy messages event-handlers' %}
-    <h4><a class="{% if page.url contains '/documentation/behaviors' %}current{% endif %}" href="{{ site.url }}/documentation/behaviors/">Behaviors</a></h4>
+    <h4><a class="{% if page.url contains '/documentation/behaviors' %}current{% endif %}" href="{{ site.baseurl }}/documentation/behaviors/">Behaviors</a></h4>
     {% include documentation-ul.html directory='behaviors' items='init destroy messages event-handlers' %}
   </aside>
 </div>
