credit card example todo example

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -5,8 +5,8 @@
     <li class="{% if page.url contains '/documentation/' %}current{% endif %}">
         <a href="{{ site.baseurl }}/documentation">documentation</a>
     </li>
-    <li class="{% if page.url contains '/tutorials/' %}current{% endif %}">
-        <a href="{{ site.baseurl }}/tutorials">tutorials</a>
+    <li class="{% if page.url contains '/tutorial/' %}current{% endif %}">
+        <a href="{{ site.baseurl }}/tutorial">tutorial</a>
     </li>
     <li class="{% if page.downloadpage %}current{% endif %}">
         <a href="{{ site.baseurl }}/download">download</a>
