--- a/_includes/tutorial-nav.html
+++ b/_includes/tutorial-nav.html
@@ -1,6 +1,6 @@
 <div>
   <aside>
-    <h4><a href="{{ site.baseurl }}/tutorials/">Tutorial</a></h4>
+    <h4><a href="{{ site.baseurl }}/tutorial/">Tutorial</a></h4>
     <ul>
         <li>Initial Setup</li>
         <li>Create a Module</li>
