--- a/_includes/documentation-nav.html
+++ b/_includes/documentation-nav.html
@@ -7,7 +7,7 @@
     <h4><a class="{% if page.url contains '/documentation/context' %}current{% endif %}" href="{{ site.baseurl }}/documentation/context/">Context</a></h4>
     {% include documentation-ul.html directory='context' items='getElement getConfig broadcast getService getGlobalConfig' %}
     <h4><a class="{% if page.url contains '/documentation/services' %}current{% endif %}" href="{{ site.baseurl }}/documentation/services/">Services</a></h4>
-    {% include documentation-ul.html directory='services' items='Singleton Factory' %}
+    {% include documentation-ul.html directory='services' items='Utilities Widgets' %}
     <h4><a class="{% if page.url contains '/documentation/modules' %}current{% endif %}" href="{{ site.baseurl }}/documentation/modules/">Modules</a></h4>
     {% include documentation-ul.html directory='modules' items='init destroy messages event-handlers' %}
     <h4><a class="{% if page.url contains '/documentation/behaviors' %}current{% endif %}" href="{{ site.baseurl }}/documentation/behaviors/">Behaviors</a></h4>
