Tweaks to examples and documentation

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -3,7 +3,7 @@
         <a href="{{ site.baseurl }}/">overview</a>
     </li>
     <li class="{% if page.url contains '/documentation/' %}current{% endif %}">
-        <a href="{{ site.baseurl }}/documentation">documentation</a>
+        <a href="{{ site.baseurl }}/docs/">documentation</a>
     </li>
     <li class="{% if page.url contains '/tutorial/' %}current{% endif %}">
         <a href="{{ site.baseurl }}/tutorial">tutorial</a>
