--- a/_includes/documentation-nav.html
+++ b/_includes/documentation-nav.html
@@ -1,16 +1,25 @@
 <div class="nav">
   <aside>
-    <h4><a class="{% if page.url contains '/documentation/application' %}current{% endif %}" href="{{ site.baseurl }}/documentation/application/">Application</a></h4>
+    <h4><a class="{% if page.url contains '/docs/api/application' %}current{% endif %}" href="{{ site.baseurl }}/docs/api/application/">Application</a></h4>
     {% include documentation-ul.html directory='application' items='init destroy addService addModule addBehavior getService getGlobalConfig getModuleConfig start startAll stop stopAll isStarted broadcast on off fire' %}
-    <h4><a class="{% if page.url contains '/documentation/event-target' %}current{% endif %}" href="{{ site.baseurl }}/documentation/event-target/">Event Target</a></h4>
+    <h4><a class="{% if page.url contains '/docs/api/event-target' %}current{% endif %}" href="{{ site.baseurl }}/docs/api/event-target/">Event Target</a></h4>
     {% include documentation-ul.html directory='event-target' items='on off fire' %}
-    <h4><a class="{% if page.url contains '/documentation/context' %}current{% endif %}" href="{{ site.baseurl }}/documentation/context/">Context</a></h4>
+    <h4><a class="{% if page.url contains '/docs/api/context' %}current{% endif %}" href="{{ site.baseurl }}/docs/api/context/">Context</a></h4>
     {% include documentation-ul.html directory='context' items='getElement getConfig broadcast getService getGlobalConfig' %}
-    <h4><a class="{% if page.url contains '/documentation/services' %}current{% endif %}" href="{{ site.baseurl }}/documentation/services/">Services</a></h4>
-    {% include documentation-ul.html directory='services' items='Utilities Widgets' %}
-    <h4><a class="{% if page.url contains '/documentation/modules' %}current{% endif %}" href="{{ site.baseurl }}/documentation/modules/">Modules</a></h4>
+
+    <h4><a class="{% if page.url contains '/docs/api/services' %}current{% endif %}" href="{{ site.baseurl }}/docs/api/services/">Services</a></h4>
+    {% include documentation-ul.html directory='services' items='Overview Rules' %}
+    <ul>
+        <li>Classification</li>
+        <li>{% include documentation-ul.html directory='services' items='Utility Widget' %}</li>
+    </ul>
+    <ul>
+        <li>Patterns</li>
+        <li>{% include documentation-ul.html directory='services' items='Singleton Factory' %}</li>
+    </ul>
+    <h4><a class="{% if page.url contains '/docs/api/modules' %}current{% endif %}" href="{{ site.baseurl }}/docs/api/modules/">Modules</a></h4>add
     {% include documentation-ul.html directory='modules' items='init destroy messages event-handlers' %}
-    <h4><a class="{% if page.url contains '/documentation/behaviors' %}current{% endif %}" href="{{ site.baseurl }}/documentation/behaviors/">Behaviors</a></h4>
+    <h4><a class="{% if page.url contains '/docs/api/behaviors' %}current{% endif %}" href="{{ site.baseurl }}/docs/api/behaviors/">Behaviors</a></h4>
     {% include documentation-ul.html directory='behaviors' items='init destroy messages event-handlers' %}
   </aside>
 </div>
