--- a/_includes/documentation-ul.html
+++ b/_includes/documentation-ul.html
@@ -2,7 +2,7 @@
 
 <ul>
 {% for item in items %}
-    {% capture item_url %}/documentation/{{ include.directory }}/#{{ item }}{% endcapture %}
+    {% capture item_url %}/docs/api/{{ include.directory }}/#{{ item }}{% endcapture %}
 
     <li><a href="{{ site.baseurl }}{{ item_url }}">{{ item }}</a></li>
 
