--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -5,13 +5,13 @@
     <li class="{% if page.url contains '/documentation/' %}current{% endif %}">
         <a href="{{ site.baseurl }}/docs/">documentation</a>
     </li>
-    <li class="{% if page.url contains '/tutorial/' %}current{% endif %}">
-        <a href="{{ site.baseurl }}/tutorial">tutorial</a>
+    <li class="{% if page.url contains '/tutorials/' %}current{% endif %}">
+        <a href="{{ site.baseurl }}/tutorials/">tutorials</a>
     </li>
     <li class="{% if page.downloadpage %}current{% endif %}">
-        <a href="{{ site.baseurl }}/download">download</a>
+        <a href="{{ site.baseurl }}/download/">download</a>
     </li>
     <li class="{% if page.url contains '/examples/' %}current{% endif %}">
-        <a href="{{ site.baseurl }}/examples">examples</a>
+        <a href="{{ site.baseurl }}/examples/">examples</a>
     </li>
 </ul>
