--- a/_includes/examples-nav.html
+++ b/_includes/examples-nav.html
@@ -1,14 +1,14 @@
-<div>
+<div class="nav">
   <aside>
     <h4><a href="{{ site.baseurl }}/examples/">Examples</a></h4>
     <ul>
-        <li><a href="{{ site.baseurl }}/examples/todo/" target="_blank">Todo List Module</a></li>
+        <li class="margin-bot-10"><a href="{{ site.baseurl }}/examples/todo/" target="_blank">Todo List Module</a></li>
         <li><a href="{{ site.baseurl }}/examples/credit-card/">Credit Card Validator</a></li>
-        <li>
+        <li class="sub">
             <ul>
-                <li><a href="{{ site.baseurl }}/examples/credit-card/#module">Module</a></li>
-                <li><a href="{{ site.baseurl }}/examples/credit-card/#service">Service</a></li>
-                <li><a href="{{ site.baseurl }}/examples/credit-card/#init">init</a></li>
+                <li><a href="{{ site.baseurl }}/examples/credit-card/#module" class="module">Module</a></li>
+                <li><a href="{{ site.baseurl }}/examples/credit-card/#service" class="service">Service</a></li>
+                <li><a href="{{ site.baseurl }}/examples/credit-card/#init" class="init">init</a></li>
             </ul>
         </li>
     </ul>
