--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
-<header class="header">
-    <div class="container">
-        <div class="sixteen columns">
-            <nav class="header-nav">
+<header class="header margin-top-50 margin-bot-50">
+	<div class="row">
+	    <div class="medium-12 columns">
+	        <nav class="header-nav">
                 {% include header-nav.html %}
             </nav>
-        </div>
-    </div>
+	    </div>
+	</div>
 </header>
-<div class="header-spacer"></div>
