--- a/_layouts/examples.html
+++ b/_layouts/examples.html
@@ -4,11 +4,11 @@
 
         {% include header.html %}
 
-        <div class="content container">
-            <div class="three columns">
+        <div id="content-start" class="content row">
+            <div class="medium-3 columns">
                 {% include examples-nav.html %}
             </div>
-            <div class="examples twelve columns offset-by-one">
+            <div class="examples medium-9 columns">
                 {{ content }}
             </div>
         </div>
