--- a/_includes/top.html
+++ b/_includes/top.html
@@ -7,16 +7,20 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/base.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/skeleton.css">
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/layout.css">
+        <!-- reset and css libraries -->
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/foundation.css">
+        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
+
+        <!-- js libraries -->
+        <script src="{{ site.baseurl }}/js/vendor/modernizr.js"></script>
+
+        <!-- fonts from the goog -->
+        <link href='http://fonts.googleapis.com/css?family=Exo+2:400,400italic,200,700,700italic' rel='stylesheet' type='text/css'>
 
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
-
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
