--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -4,11 +4,11 @@
 
         {% include header.html %}
 
-        <div class="content container">
-            <div class="three columns">
+        <div class="content row">
+            <div class="medium-3 columns">
                 {% include documentation-nav.html %}
             </div>
-            <div class="documentation twelve columns offset-by-one">
+            <div class="documentation medium-9 columns">
                 {{ content }}
             </div>
         </div>
