--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -4,11 +4,11 @@
 
         {% include header.html %}
 
-        <div class="content container">
-            <div class="three columns">
+        <div class="content row">
+            <div class="medium-3 columns">
                 {% include tutorial-nav.html %}
             </div>
-            <div class="tutorial twelve columns offset-by-one">
+            <div class="tutorial medium-9 columns">
                 {{ content }}
 
                 {% if page.prev %}
