--- a/css/main.css
+++ b/css/main.css
@@ -3,15 +3,39 @@
 /* Header
 /*
 /*****************************************************************************/
+
+#nav-icon {
+  	float: left;
+  	display: block;
+  	width: 55px;
+  	height: 55px;
+  	background: url(/img/icon-T3-nav.png) center center no-repeat;
+  	background: url(/img/icon-T3-nav.svg) center center no-repeat, none;
+
+  	/* hide text */
+  	text-indent: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+@media 
+(-webkit-min-device-pixel-ratio: 1.25), 
+(min-resolution: 120dpi){ 
+    #nav-icon {
+	  	background: url(/img/icon-T3-nav@2x.png) center center no-repeat;
+	  	background: url(/img/icon-T3-nav.svg) center center no-repeat, none;
+	}
+}
+
 .header {
-	position: fixed;
 	top: 0;
 	width: 100%;
-	background-color: #660000;
+	height: 55px;
 	z-index: 100;
 }
 
 .header-nav ul {
+	float: right;
 	margin-bottom: 0;
 }
 .header-nav li {
@@ -21,19 +45,54 @@
 }
 
 .header-nav li a {
-	color: #CCC;
+	color: #7d868b;
+	text-decoration: none;
+	text-transform: uppercase;
+	font-size: 10pt;
+}
+
+.header-nav li a:hover,
+.header-nav li.current a:hover {
+	color: #4d37b9;
 	text-decoration: none;
 }
 
 .header-nav li.current a {
-	color: #FFF;
+	color: #252c32;
 	border-radius: 1px;
-	text-decoration: underline;
+	text-decoration: none;
+	font-weight: 600;
 }
 
 .header-spacer {
 	height: 40px;
 }
+
+/*****************************************************************************/
+/*
+/* Hero
+/*
+/*****************************************************************************/
+
+#hero {
+	max-height: 80%;
+	min-height: 700px;
+}
+
+#cta {
+	font-size: 18pt;
+	/*font-weight: 200;*/
+}
+
+#learn-more {
+	position: relative;
+	top: -200px;
+}
+
+#learn-more a:hover {
+	text-decoration: none;
+}
+
 
 /*****************************************************************************/
 /*
@@ -56,32 +115,111 @@
 	margin: 40px 0;
 }
 
-.nav h4 a {
-	text-decoration: none;
-}
-.nav h4 a.current {
-	font-weight: bold;
-	color: #995555
-}
-
 .documentation h2 {
-	font-size: 250%;
+	font-size: 24px;
+	font-weight: 600;
+	color: #252c32;
+	margin-bottom: 40px;
 }
 
 .documentation h3 {
-	font-size: 150%;
+	font-size: 13px;
+	text-transform: uppercase;
+	color: #7d868b;
+	font-weight: 400;
+	margin-top: 40px;
 }
 
 .documentation .required {
-	font-weight: bold;
+	font-weight: 600;
+	font-style: italic;
 }
 
 .documentation .optional {
 	font-style: italic;
 }
+
 .documentation thead tr {
+	font-weight: 400;
+	color: #7d868b;
+}
+
+.prev {
+	float: left;
+}
+
+.next {
+	float: right;
+}
+
+
+/*****************************************************************************/
+/*
+/* Side Navigation
+/*
+/*****************************************************************************/
+
+.nav.fixed {
+	position: fixed;
+	top: 25px;
+	width: 100%;
+	height: 100%;
+	padding-bottom: 50px;
+	overflow-y: auto;	
+	overflow-x: hidden;
+}
+
+.nav h4 a {
+	text-decoration: none;
+	font-weight: 400;
+	font-size: 18px;
+	color: #7d868b;
+}
+
+.nav h4 a:hover {
+	color: #422f9f;
+}
+
+.nav h4 a.current {
+	color: #422f9f;
+}
+
+.nav ul {
+	/*display: none;*/
+	list-style-type: none;
+	margin: 0 0 25px 0;
+	font-size: 13px;
+}
+
+.nav .active ul {
+	display: block;
+}
+
+.nav ul li a {
+	color: #7d868b;
+}
+
+.nav ul li a.active {
+	color: #252c32;
 	font-weight: bold;
-	background-color: #faa2a2;
+}
+
+.nav ul li.sub ul {
+	margin: 0 0 5px 10px;
+}
+
+/*****************************************************************************/
+/*
+/* Footer
+/*
+/*****************************************************************************/
+
+footer.footer {
+	
+}
+
+#copyright {
+	border-top: 1px solid #dde6eb;
 }
 
 /*****************************************************************************/
@@ -93,7 +231,7 @@
 table {
 	max-width: 100%;
 	background-color: transparent;
-	border-bottom: 1px solid #ddd;
+	border-bottom: 1px solid #dde6eb;
 }
 th {
 	text-align: left;
@@ -108,14 +246,16 @@ th {
 .table > thead > tr > td,
 .table > tbody > tr > td,
 .table > tfoot > tr > td {
-	padding: 8px;
-	line-height: 1.428571429;
+	padding: 15px 15px 15px 0;
+	line-height: 2;
 	vertical-align: top;
-	border-top: 1px solid #ddd;
+	border-top: 1px solid #dde6eb;
+	font-size: 16px;
 }
 .table > thead > tr > th {
 	vertical-align: bottom;
-	border-bottom: 2px solid #ddd;
+	color: #7d868b;
+	border-bottom: 2px solid #dde6eb;
 }
 .table > caption + thead > tr:first-child > th,
 .table > colgroup + thead > tr:first-child > th,
@@ -126,39 +266,119 @@ th {
 	border-top: 0;
 }
 .table > tbody + tbody {
-	border-top: 2px solid #ddd;
+	border-top: 2px solid #dde6eb;
 }
 .table .table {
 	background-color: #fff;
 }
 .table-striped > tbody > tr:nth-child(odd) > td,
 .table-striped > tbody > tr:nth-child(odd) > th {
-	background-color: #f9f9f9;
+	background-color: #fff;
 }
 .table-hover > tbody > tr:hover > td,
 .table-hover > tbody > tr:hover > th {
-	background-color: #f5f5f5;
+	background-color: #fff;
 }
 
-.prev { float: left; }
-.next { float: right; }
+/*****************************************************************************/
+/*
+/* Utils
+/*
+/*****************************************************************************/
 
-p > code {
-	font-size: 13px;
-	white-space: nowrap;
-	margin: 0;
-	border: 1px solid #ddd;
-	background-color: #f8f8f8;
-	border-radius: 3px;
-	max-width: 100%;
+.button {
 	display: inline-block;
-	overflow: auto;
-	vertical-align: middle;
-	line-height: 1.3;
-	padding: 0;
-	font-family: Menlo, Consolas, "Courier New", Courier, "Liberation Mono", monospace;
+	text-decoration: none;
+	padding: 15pt 30pt;
+	border-radius: 10px;
+	background-image: -moz-linear-gradient( 90deg, rgb(47,34,158) 0%, rgb(108,77,213) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(47,34,158) 0%, rgb(108,77,213) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(47,34,158) 0%, rgb(108,77,213) 100%);
+	color: #fff;
+}
+a.button:hover {
+	color: #fff;
+	text-decoration: none;
+	background-image: -moz-linear-gradient( 90deg, rgb(52,38,176) 0%, rgb(130,93,255) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(52,38,176) 0%, rgb(130,93,255) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(52,38,176) 0%, rgb(130,93,255) 100%);
+}
+a.button:active {
+	background-image: -moz-linear-gradient( 90deg, rgb(52,38,176) 0%, rgb(47,34,158) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(52,38,176) 0%, rgb(47,34,158) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(52,38,176) 0%, rgb(47,34,158) 100%);
 }
 
-p > code:before, p > code:after {
-	content: "\00a0";
+.grad-text {
+	background-image: -moz-linear-gradient( 90deg, rgb(47,34,158) 0%, rgb(108,77,213) 100%);
+	background-image: -webkit-linear-gradient( 90deg, rgb(47,34,158) 0%, rgb(108,77,213) 100%);
+	background-image: -ms-linear-gradient( 90deg, rgb(47,34,158) 0%, rgb(108,77,213) 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.margin-top-100 {
+	margin-top: 100px;
+}
+.margin-top-50 {
+	margin-top: 50px;
+}
+.margin-top-25 {
+	margin-top: 25px;
+}
+.margin-top-10 {
+	margin-top: 10px;
+}
+
+.margin-bot-100 {
+	margin-bottom: 100px;
+}
+.margin-bot-50 {
+	margin-bottom: 50px;
+}
+.margin-bot-25 {
+	margin-bottom: 25px;
+}
+.margin-bot-10 {
+	margin-bottom: 10px;
+}
+
+.pad-top-100 {
+	padding-top: 100px;
+}
+.pad-top-50 {
+	padding-top: 50px;
+}
+.pad-top-25 {
+	padding-top: 25px;
+}
+.pad-top-10 {
+	padding-top: 10px;
+}
+
+.pad-bot-100 {
+	padding-bottom: 100px;
+}
+.pad-bot-50 {
+	padding-bottom: 50px;
+}
+.pad-bot-25 {
+	padding-bottom: 25px;
+}
+.pad-bot-10 {
+	padding-bottom: 10px;
+}
+
+.text-center {
+	text-align: center;
+}
+.text-left {
+	text-align: left;
+}
+.text-right {
+	text-align: right;
+}
+
+.border-bot {
+	border-bottom: 1px solid #dde6eb;
 }
