Moved todo example
Created a todo landing page
Embedded example with iframe

--- a/_includes/examples-nav.html
+++ b/_includes/examples-nav.html
@@ -2,7 +2,14 @@
   <aside>
     <h4><a href="{{ site.baseurl }}/examples/">Examples</a></h4>
     <ul>
-        <li class="margin-bot-10"><a href="{{ site.baseurl }}/examples/todo/" target="_blank">Todo List Module</a></li>
+        <li class="margin-bot-10"><a href="{{ site.baseurl }}/examples/todo/">Todo List</a></li>
+        <li class="sub">
+            <ul>
+                <li><a href="{{ site.baseurl }}/examples/todo/#demo" class="demo">Demo</a></li>
+                <li><a href="{{ site.baseurl }}/examples/todo/#sourcecode" class="sourcecode">Source Code</a></li>
+                <li><a href="{{ site.baseurl }}/examples/todo/#explanation" class="explanation">Explanation</a></li>
+            </ul>
+        </li>
         <li><a href="{{ site.baseurl }}/examples/credit-card/">Credit Card Validator</a></li>
         <li class="sub">
             <ul>
