--- a/_includes/examples-nav.html
+++ b/_includes/examples-nav.html
@@ -2,20 +2,20 @@
   <aside>
     <h4><a href="{{ site.baseurl }}/examples/">Examples</a></h4>
     <ul>
-        <li class="margin-bot-10"><a href="{{ site.baseurl }}/examples/todo/">Todo List</a></li>
-        <li class="sub">
+        <li><a class="{% if page.url contains '/examples/todo/' %}active{% endif %}" href="{{ site.baseurl }}/examples/todo/">Todo List</a></li>
+        <li class="sub margin-bot-10">
             <ul>
-                <li><a href="{{ site.baseurl }}/examples/todo/#demo" class="demo">Demo</a></li>
-                <li><a href="{{ site.baseurl }}/examples/todo/#sourcecode" class="sourcecode">Source Code</a></li>
-                <li><a href="{{ site.baseurl }}/examples/todo/#explanation" class="explanation">Explanation</a></li>
+                <li><a href="{{ site.baseurl }}/examples/todo/#demo" data-item="demo">Demo</a></li>
+                <li><a href="{{ site.baseurl }}/examples/todo/#sourcecode" data-item="sourcecode">Source Code</a></li>
+                <li><a href="{{ site.baseurl }}/examples/todo/#explanation" data-item="explanation">Explanation</a></li>
             </ul>
         </li>
-        <li><a href="{{ site.baseurl }}/examples/credit-card/">Credit Card Validator</a></li>
+        <li><a class="{% if page.url contains '/examples/credit-card/' %}active{% endif %}" href="{{ site.baseurl }}/examples/credit-card/">Credit Card Validator</a></li>
         <li class="sub">
             <ul>
-                <li><a href="{{ site.baseurl }}/examples/credit-card/#module" class="module">Module</a></li>
-                <li><a href="{{ site.baseurl }}/examples/credit-card/#service" class="service">Service</a></li>
-                <li><a href="{{ site.baseurl }}/examples/credit-card/#init" class="init">init</a></li>
+                <li><a href="{{ site.baseurl }}/examples/credit-card/#module" data-item="module">Module</a></li>
+                <li><a href="{{ site.baseurl }}/examples/credit-card/#service" data-item="service">Service</a></li>
+                <li><a href="{{ site.baseurl }}/examples/credit-card/#init" data-item="init">init</a></li>
             </ul>
         </li>
     </ul>
