--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<div id="hero" class="pad-bot-100 margin-bot-100 border-bot">
+<div id="hero" class="pad-bot-100 margin-bot-50 border-bot">
     <div class="row">
         <div class="medium-12 columns text-center">
             <div style="height: 193px;">
@@ -11,10 +11,10 @@
     <div class="row">
         <div class="medium-10 medium-offset-1 columns text-center margin-top-100">
             <h2 class="grad-text">T3 is a minimalist javascript framework that provides core structure to code</h2>
-            <a id="cta" class="button margin-top-25" href="{{ site.baseurl }}/download">Download T3</a>
+            <a class="button cta margin-top-25" href="{{ site.baseurl }}/download">Download T3</a>
         </div>
     </div>
 </div>
 <div id="learn-more" class="row text-center">
-    <a href="#content-start">Learn More<br />&darr;</a>
+    <a href="#core-philosophy">Learn More<br />&darr;</a>
 </div>
