--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
 
         <div id="content-start" class="content row">
             <div class="tutorial medium-12 columns">
+                <div class="anchor" id="anchor-top"></div>
                 {{ content }}
             </div>
         </div>
