--- a/_layouts/tutorial.html
+++ b/_layouts/tutorial.html
@@ -9,6 +9,7 @@
                 {% include tutorial-nav.html %}
             </div>
             <div class="tutorial medium-9 columns">
+                <div class="anchor" id="anchor-top"></div>
                 {{ content }}
 
                 {% if page.prev %}
