--- a/_layouts/documentation.html
+++ b/_layouts/documentation.html
@@ -9,6 +9,7 @@
                 {% include documentation-nav.html %}
             </div>
             <div class="documentation medium-9 columns">
+                <div class="anchor" id="anchor-top"></div>
                 {{ content }}
             </div>
         </div>
