--- a/_layouts/examples.html
+++ b/_layouts/examples.html
@@ -9,6 +9,7 @@
                 {% include examples-nav.html %}
             </div>
             <div class="examples medium-9 columns">
+                <div class="anchor" id="anchor-top"></div>
                 {{ content }}
             </div>
         </div>
