--- a/_includes/tutorial-nav.html
+++ b/_includes/tutorial-nav.html
@@ -3,7 +3,7 @@
     <h4><a href="{{ site.baseurl }}/tutorials/">Tutorial</a></h4>
     <ul>
         <li><a href="{{ site.baseurl }}/tutorials/initial-setup/" class="{% if page.url contains '/tutorials/initial-setup' %}active{% endif %}">Initial Setup</a></li>
-        <li><a href="{{ site.baseurl }}/tutorials/create-a-module/" class="{% if page.url contains '/tutorials/create-a-module' %}active{% endif %}">Create a Module</a></li>
+        <li><a href="{{ site.baseurl }}/tutorials/create-the-modules/" class="{% if page.url contains '/tutorials/create-the-modules' %}active{% endif %}">Create Modules</a></li>
         <li><a href="{{ site.baseurl }}/tutorials/passing-messages/" class="{% if page.url contains '/tutorials/passing-messages' %}active{% endif %}">Passing Messages</a></li>
         <li><a href="{{ site.baseurl }}/tutorials/event-handlers/" class="{% if page.url contains '/tutorials/event-handlers' %}active{% endif %}">Event Handlers</a></li>
         <li><a href="{{ site.baseurl }}/tutorials/use-a-service/" class="{% if page.url contains '/tutorials/use-a-service' %}active{% endif %}">Use a Service</a></li>
