--- a/_includes/tutorial-nav.html
+++ b/_includes/tutorial-nav.html
@@ -2,6 +2,7 @@
   <aside>
     <h4><a href="{{ site.baseurl }}/tutorials/">Tutorial</a></h4>
     <ul>
+        <li><a href="{{ site.baseurl }}/tutorials/architecture/" class="{% if page.url contains '/tutorials/architecture' %}active{% endif %}">Architecture</a></li>
         <li><a href="{{ site.baseurl }}/tutorials/initial-setup/" class="{% if page.url contains '/tutorials/initial-setup' %}active{% endif %}">Initial Setup</a></li>
         <li><a href="{{ site.baseurl }}/tutorials/create-the-modules/" class="{% if page.url contains '/tutorials/create-the-modules' %}active{% endif %}">Create Modules</a></li>
         <li><a href="{{ site.baseurl }}/tutorials/passing-messages/" class="{% if page.url contains '/tutorials/passing-messages' %}active{% endif %}">Passing Messages</a></li>
