--- a/css/foundation.css
+++ b/css/foundation.css
@@ -43,7 +43,7 @@ body {
   color: #252c32;
   padding: 0;
   margin: 0;
-  font-family: "Exo 2", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   line-height: 1;
