Update top-level navigation

--- a/_includes/header-nav.html
+++ b/_includes/header-nav.html
@@ -2,12 +2,15 @@
 
 <ul>
     <li class="{% if page.url contains '/docs/' %}current{% endif %}">
-        <a href="{{ site.baseurl }}/docs/">documentation</a>
+        <a href="{{ site.baseurl }}/docs/">Documentation</a>
     </li>
     <li class="{% if page.downloadpage %}current{% endif %}">
-        <a href="{{ site.baseurl }}/download/">download</a>
+        <a href="{{ site.baseurl }}/download/">Download</a>
     </li>
     <li class="{% if page.url contains '/examples/' %}current{% endif %}">
-        <a href="{{ site.baseurl }}/examples/">examples</a>
+        <a href="{{ site.baseurl }}/examples/">Examples</a>
+    </li>
+    <li>
+        <a href="https://github.com/box/t3js" target="_new">GitHub</a>
     </li>
 </ul>
