--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -10,7 +10,7 @@
 
     <div class="row">
         <div class="medium-10 medium-offset-1 columns text-center margin-top-100">
-            <h2 class="grad-text">T3 is a minimalist javascript framework that provides core structure to code</h2>
+            <h2 class="grad-text">T3 is a minimalist JavaScript framework that provides core structure to code</h2>
             <a class="button cta margin-top-25" href="{{ site.baseurl }}/download">Download T3</a>
         </div>
     </div>
