Fixing the Favicon

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -7,6 +7,10 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
+        <!-- favicon -->
+        <link rel="shortcut icon" href="{{ site.baseurl }}/img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="{{ site.baseurl }}/img/favicon.ico" type="image/x-icon">
+
         <!-- reset and css libraries -->
         <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
         <link rel="stylesheet" href="{{ site.baseurl }}/css/foundation.css">
